examples/test/testpolicy17758.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17758
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key45: value3
      key6: value11
      key15: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value24
      podSelector:
        matchLabels:
          key37: value13
